...
          minVerticalPadding: 16,
          horizontalTitleGap: 16,

          // The Song Title
          title: Text(
            musicData.trackName,
            key: const Key('music-title'),
            style: theme.textTheme.bodyText2?.copyWith(
              color: isSelected ? theme.colorScheme.primaryContainer : null,
            ),
            overflow: TextOverflow.ellipsis,
          ),

...
            ],
          ),

          // The Music's Active Indicator
          trailing: isSelected
              ? SizedBox(
                  key: const Key('music-active-indicator'),
                  width: defaultIconSize,
                  height: defaultIconSize,
                  child: Icon(
                    Icons.music_note,
                    size: defaultIconSize,
                    color: theme.colorScheme.primary,
...
