...
                          ? Icon(
                              Icons.search,
                              color: defaultContentColor.withOpacity(.7),
                            )
                          : Icon(
                              Icons.close,
                              key: const Key('search-field-clear'),
                              color: defaultContentColor,
                            ),
                      onPressed: () {
                        _onClearIconPressed(searchKeyword);
                      },
                    );
...
